--- a/css/main.css
+++ b/css/main.css
@@ -1,22 +1,10 @@
-html {
-	font-size: 16px;
-}
-
 body {
 	font-family: 'Montserrat', Helvetica, Arial, sans-serif;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	font-size: 1em;
 }
 
-.container {
+.container{
 	max-width: 1200px;
-	width: 90%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-flow: row wrap;
+	margin: 0 auto;
 }
 
 h1,
@@ -44,11 +32,13 @@ p {
 
 /*The widths are in a percentage!*/
 header {
+	height: 110px;
 	border-bottom: 3px solid #77a466;
 	margin: 0 auto;
 }
 
 header h1 {
+	float: left;
 	margin: 0;
 	padding: 38px 0;
 }
@@ -57,6 +47,7 @@ header h1 span {
 }
 
 header nav {
+	float: right;
 	padding: 46px 0;
 }
 header nav ul {
@@ -79,10 +70,12 @@ header nav ul li a{
 .top-section,
 .bottom-section {
 	margin: 0 auto;
+	clear: both;
 }
 
 .main-image {
 	height: auto;
+	float: left;
 }
 .main-image img {
 	width: 100%;
@@ -91,6 +84,7 @@ header nav ul li a{
 
 .main-title {
 	height: auto;
+	float: left;
 }
 .main-title h2 {
 	text-align: left;
@@ -108,6 +102,7 @@ header nav ul li a{
 .section-three {
 	width: 33%;
 	height: auto;
+	float: left;
 	border-top: 1px solid #eee;
 }
 
@@ -147,8 +142,10 @@ header nav ul li a{
 
 /*The widths are in a percentage!*/
 footer {
+	height: 50px;
 	border-top: 3px solid #eee;
 	margin: 0 auto;
+	clear: both;
 	text-align: center;
 }
 footer span {
